--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ html {
 }
 
 #slider {
+    position: relative;
     width: 100%;
     max-width: 1600px;
     margin: 0 auto;
@@ -80,6 +81,40 @@ html {
     width: 100%;
     max-width: 1600px;
     display: block;
+
+}
+
+#slider .logo-bran {
+    position: absolute;
+    top: 50%;
+    padding: 12px 24px;
+    color: #fff;
+}
+
+#slider .logo-bran h1 {
+    font-size: 36px;
+    margin: 10px 0;
+}
+
+#slider .logo-bran b {
+    font-size: 64px;
+}
+
+#slider .logo-bran button {
+    font-family: "Open Sans", serif;
+    padding: 12px 24px;
+    display: block;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: 18px;
+    background-color: rgb(204, 204, 204);
+    margin-top: 12px;
+}
+
+#slider .logo-bran button:hover {
+
+    background: #fff;
 }
 
 
@@ -337,7 +372,7 @@ html {
     display: block;
     width: 100%;
     background-color: #f44336;
-    padding: 8px 16px;
+    padding: 12px 16px;
     border: 1px solid #ccc;
     margin: 10px 0;
     display: inline-block;
@@ -352,7 +387,7 @@ html {
 
 .post-form .input-form {
     width: 100%;
-    padding: 8px;
+    padding: 12px;
     border: 1px solid #ccc;
     margin: 10px 0;
 
@@ -371,6 +406,8 @@ html {
     margin-bottom: 16px;
     background-color: #000;
     color: #fff;
+    border: none;
+    cursor: pointer;
 }
 
 #footer p {
@@ -378,4 +415,10 @@ html {
     color: #fff;
     margin: 10px 0;
     font-size: 15px;
+
+}
+
+#footer button:hover {
+    background-color: #ccc;
+    color: #000;
 }
